changes to all the clues to not have text in the MCQ

--- a/hunt/2.html
+++ b/hunt/2.html
@@ -38,7 +38,7 @@
     </section>
   </main>
 
-  <footer>Keep moving — don’t block doorways 🙂</footer>
+  <footer>Keep moving — don’t block doorways </footer>
 
   <script src="../assets/app.js"></script>
 </body>
