--- a/hunt/done.html
+++ b/hunt/done.html
@@ -9,7 +9,7 @@
 <body data-page="done">
   <header>
     <div class="title">You finished!</div>
-    <p class="subtitle">Show this to an ACM volunteer for prizes. If the leaderboard is enabled, this page also auto-submits your time.</p>
+    <p class="subtitle">Show this to an ACM volunteer for prizes. This page also auto-submits your time.</p>
   </header>
 
   <main class="wrap">
