structure changes for better implementation

--- a/hunt/done.html
+++ b/hunt/done.html
@@ -8,7 +8,7 @@
 </head>
 <body data-page="done">
   <header>
-    <div class="title">You finished!</div>
+    <div class="title">Congrats! You Finished!</div>
     <p class="subtitle">Show this to an ACM volunteer for prizes. This page also auto-submits your time.</p>
   </header>
 
