--- a/hunt/2.html
+++ b/hunt/2.html
@@ -30,7 +30,6 @@
         </label>
         <div class="actions">
           <button class="btn" id="unlock" type="button">Unlock next hint</button>
-          <button class="btn ghost" id="volunteerHelp" type="button">Volunteer hint</button>
           <a class="btn secondary" href="../index.html">Home</a>
         </div>
         <div id="result" aria-live="polite"></div>
@@ -38,7 +37,7 @@
     </section>
   </main>
 
-  <footer>Keep moving — don’t block doorways </footer>
+  <footer>Keep moving — don't trip on the cobblestones </footer>
 
   <script src="../assets/app.js"></script>
 </body>
