--- a/hunt/1.html
+++ b/hunt/1.html
@@ -21,13 +21,10 @@
       <div id="pBody"></div>
       <div class="stack" style="margin-top:12px">
         <div id="answerWrap">
-        <label>
-          Or type the answer (optional)
-          <input id="answer" type="text" placeholder="type here if you prefer" />
-        </label>
         </div>
         <div class="actions">
           <button class="btn" id="unlock" type="button">Unlock hint</button>
+          <a class="btn secondary" href="../index.html">Home</a>
         </div>
         <div id="result" aria-live="polite"></div>
       </div>
@@ -36,9 +33,9 @@
     <section class="card">
       <h2>Quick rules</h2>
       <ul style="margin:0; padding-left: 1.2rem">
-        <li>Don’t peel posters or block doorways.</li>
-        <li>Teams stay together.</li>
-        <li>If you’re stuck, ask an ACM volunteer.</li>
+        <li>The hunt can be done solo or with a team.</li>
+        <li>If you’re stuck on anything, ask an ACM volunteer.</li>
+        <li>Don’t peel posters please & have fun!</li>
       </ul>
     </section>
   </main>
