--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </label>
         <div class="actions">
           <button class="btn" id="saveTeam" type="button">Save team</button>
-          <a class="btn secondary" href="hunt/1.html">Start (if you already scanned the starter QR)</a>
+          <a class="btn secondary" href="hunt/1.html">Start hunt!</a>
           <a class="btn ghost" href="https://GSACM.github.io" target="_blank" rel="noopener">ACM Site</a>
         </div>
         <div id="homeMsg" aria-live="polite"></div>
