Added live leaderboard functionality with google sheet and google form, also added a map

--- a/index.html
+++ b/index.html
@@ -39,20 +39,24 @@
     </section>
 
 
-    <section class="card">
-      <h2>How this works</h2>
+    <section class="card">      <h2>Hunt Map 🗺️</h2>
+      <p class="hint">Your journey across campus — can you find all 4 locations?</p>
+      <div id="campusMap"></div>
+    </section>
+
+    <section class="card">      <h2>How this works</h2>
       <ol style="margin:0; padding-left: 1.2rem">
         <li>Scan the <strong>Starter QR</strong> at the ACM table.</li>
         <li>Solve the puzzle. Solving it unlocks a hint for the next location.</li>
         <li>Go to that location and scan the posted QR to get the next clue page.</li>
         <li>Finish the last clue and let us know what you think!</li>
       </ol>
-      <p class="tiny" style="margin-top:10px">@  copyright of the current ACM Vice President</p>
+      <p class="tiny" style="margin-top:10px">The hunt is on! </p>
     </section>
   </main>
 
   <footer>
-    Questions? Find ACM at the Organization Fair.
+    Made for hackathon @ copyright of Hamza 
   </footer>
 
   <script src="assets/app.js"></script>
