--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </section>
 
 
-    <section class="card">      <h2>Hunt Map 🗺️</h2>
-      <p class="hint">Your journey across campus — can you find all 4 locations?</p>
+    <section class="card">      <h2>Map </h2>
+      <p class="hint">Campus layout — can you find all 4 locations?</p>
       <div id="campusMap"></div>
     </section>
 
@@ -56,7 +56,7 @@
   </main>
 
   <footer>
-    Made for hackathon @ copyright of Hamza 
+    Made for ACM hackathon event @ copyright of Hamza 
   </footer>
 
   <script src="assets/app.js"></script>
